<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/calculate_your"
        android:textAlignment="viewStart"
        android:textColor="@color/myTextColor"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/ageColor"
        android:padding="18dp"
        android:text="@string/age"
        android:textAlignment="viewStart"
        android:textColor="@color/text2Color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/in_minutes"
        android:textAlignment="viewStart"
        android:textColor="@color/myTextColor"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn1BgColor"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/day"
        android:textAlignment="viewStart"
        android:textColor="@color/dateColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selected_date"
        android:textAlignment="viewStart"
        android:textColor="#290FBA"
        android:textSize="16sp"
       />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/_0000000000000"
        android:textAlignment="viewStart"
        android:textColor="@color/dateColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/in_minutes2"
        android:textAlignment="viewStart"
        android:textColor="#290FBA"
        android:textSize="16sp"
        />

</LinearLayout>